# serde-tutorial

./: Cargo.toml  README.md
attributes/: Cargo.toml
attributes/src/: main.rs
custom-serialization/: Cargo.toml
custom-serialization/src/: main.rs
default-value-for-a-field/: Cargo.toml
default-value-for-a-field/src/: main.rs
deriving-de-serialize-for-type-in-a-different-crate/: Cargo.toml
deriving-de-serialize-for-type-in-a-different-crate/src/: main.rs
discarding-data/: Cargo.toml
discarding-data/src/: main.rs
enum-representations/: Cargo.toml
enum-representations/src/: main.rs
handwritten-generic-type-bounds/: Cargo.toml
handwritten-generic-type-bounds/src/: main.rs
implement-deserialize-for-a-custom-map-type/: Cargo.toml
implement-deserialize-for-a-custom-map-type/src/: main.rs
manually-implementing-deserialize-for-a-struct/: Cargo.toml
manually-implementing-deserialize-for-a-struct/src/: main.rs
phantom-data/: Cargo.toml
phantom-data/src/: main.rs
processing-an-array-of-values-without-buffering-into-a-vec/: Cargo.toml
processing-an-array-of-values-without-buffering-into-a-vec/src/: main.rs
serialize-enum-as-number/: Cargo.toml
serialize-enum-as-number/src/: main.rs
serialize-fields-as-camelcase/: Cargo.toml
serialize-fields-as-camelcase/src/: main.rs
skip-serializing-field/: Cargo.toml
skip-serializing-field/src/: main.rs
struct-flattening/: Cargo.toml
struct-flattening/src/: main.rs
the-visitor-trait/: Cargo.toml
the-visitor-trait/src/: main.rs
using-derive/: Cargo.toml
using-derive/src/: main.rs
