[package]
name = "serialize-fields-as-camelcase"
version = "0.1.0"
authors = ["Benjamin Lee <bnllee@ucdavis.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"